force-app/main/default/objects/Property__c/fields/Available_Lots__c.field-meta.xml
<CustomField>
    <fullName>Available_Lots__c</fullName>
    <description>Available Lots for Purchase</description>
    <formula>Total_Lots__c - Sold_Lots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Lots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>