force-app/main/default/objects/Property__c/fields/Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Profit_Amount__c</fullName>
    <inlineHelpText>Enter the total profit generated for this property</inlineHelpText>
    <label>Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>