force-app/main/default/objects/Property__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <description>Return On Investment</description>
    <label>ROI %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>