force-app/main/default/objects/Property__c/fields/Sold_Lots__c.field-meta.xml
<CustomField>
    <fullName>Sold_Lots__c</fullName>
    <label>Sold Lots</label>
    <summaryForeignKey>Investment_Lot__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>