force-app/main/default/objects/Property__c/fields/Total_Lots__c.field-meta.xml
<CustomField>
    <fullName>Total_Lots__c</fullName>
    <description>Number of investment lots for this property</description>
    <label>Total Lots</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>