force-app/main/default/objects/Property__c/fields/Total_Lots_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Lots_Purchased__c</fullName>
    <label>Total Lots Purchased</label>
    <summarizedField>Transaction__c.Lots_Purchased__c</summarizedField>
    <summaryForeignKey>Transaction__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>