force-app/main/default/objects/Property__c/recordTypes/Land_Plot.recordType-meta.xml
<RecordType>
    <fullName>Land_Plot</fullName>
    <active>true</active>
    <label>Land Plot</label>
</RecordType>